[#184521048] replace python-prior with python generator